src/styles/style.css
.carousel {
  position: relative;
  overflow: hidden;
  width: 100%;
}

.carousel__track-container {
  width: 100%;
}

.carousel__track {
  display: flex;
  transition: transform var(--transition-duration, 0.1s) ease;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.carousel__slide {
  flex: 0 0 100%;
  width: 100%;
  height: 23rem;
  box-sizing: border-box;
  margin: 0;
}

.carousel__slide img {
  width: 100%;
  height: 100%;
}

/* 인디케이터 */
.carousel__nav {
  position: absolute;
  bottom: 10px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  z-index: 2;
}

.carousel__indicator {
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background-color: #ccc;
  margin: 0 5px;
  border: none;
  cursor: pointer;
  opacity: 0.6;
  transition: opacity 0.3s;
}

.carousel__indicator.active {
  background-color: #000000;
  opacity: 1;
}

.carousel__indicator:hover {
  background-color: #575757;
}

/* 슬라이드 전 후 버튼 */
.carousel__button {
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  border-radius: 50%;
  padding: 5px 10px;
  font-size: 1rem;
  cursor: pointer;
  transition:
    background-color 0.3s,
    transform 0.2s;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  z-index: 1;
}

.carousel__button--left {
  left: 10px;
}

.carousel__button--right {
  right: 10px;
}

.carousel__button:hover {
  background-color: rgba(86, 86, 86, 0.7);
}

/* 속도, 간격 조절 관련*/
.controls {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 30px auto;
}

.control-group {
  display: flex;
  align-items: center;
  gap: 1rem;
  flex-wrap: wrap;
  justify-content: center;
}

.label {
  font-size: 14px;
  font-weight: 600;
  color: #555;
  white-space: nowrap;
  flex-shrink: 0;
  padding-right: 8px;
}

.error-message {
  color: red;
  display: none;
  margin-top: 10px;
  font-size: 14px;
  text-align: center;
}

.input-number {
  width: 150px;
  padding: 8px;
  border: 1px solid #ddd;
  border-radius: 8px;
}

.input-number:focus {
  border-color: #000;
}

.btn-update {
  padding: 0.5rem 1rem;
  background-color: #000;
  color: white;
  font-size: 14px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  font-weight: 600;
  white-space: nowrap;
}

.btn-update:hover {
  background-color: #333;
}

/* 자동 재생 버튼 */
.play-pause-btn {
  cursor: pointer;
  background-color: rgb(0, 0, 0);
  color: white;
  border: none;
  border-radius: 50%;
  width: 30px;
  height: 30px;
  padding: 0;
  font-size: 1rem;
  text-align: center;
  font-weight: 700;
  z-index: 3;
  position: absolute;
  bottom: 10px;
  right: 10px;
}

.play-pause-btn:hover {
  background-color: #373232;
}

/* 반응형 : 패드 */
@media (max-width: 768px) {
  .carousel__indicator {
    width: 5px;
    height: 10px;
    margin: 0 3px;
  }
  .carousel__button {
    font-size: 0.9rem;
  }
  .input-number {
    width: 100px;
  }
  .play-pause-btn {
    width: 25px;
    height: 25px;
    font-size: 14px;
  }
  .label {
    padding-right: 6px;
  }
  .btn-update {
    padding: 0.5rem;
    font-size: 14px;
  }
}

/* 반응형 : 모바일 */
@media (max-width: 480px) {
  .carousel__slide {
    height: 20rem;
  }
  .carousel__indicator {
    width: 4px;
    height: 4px;
    margin: 0 3px;
    border-radius: 3px;
  }
  .carousel__button {
    font-size: 0.8rem;
  }
  /* 모바일에서만 두 줄로 설정 */
  .control-group {
    flex-direction: column;
    align-items: flex-start;
    gap: 0.6rem;
  }
  .button-wrapper {
    display: flex;
    justify-content: center;
    width: 100%;
  }
  .btn-update {
    padding: 0.5rem;
    font-size: 12px;
  }
  .input-number {
    width: 150px;
  }

  .play-pause-btn {
    width: 20px;
    height: 20px;
    font-size: 10px;
  }

  .error-message {
    font-size: 12px;
  }

  .label {
    font-size: 12px;
  }
}

